Update LootProtection expansion for 1.21+ item spawn locations.
Fixes Issue #929